--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "clean": "rimraf dist",
     "test": "vitest run -c ./config/test/config.ts",
-    "test:watch": "vitest run -c ./config/test/config.ts"
+    "test:watch": "vitest run -c ./config/test/config.ts",
+    "deploy": "gh-pages -d dist"
   },
   "imports": {
     "#*": "./src/*"
@@ -44,6 +45,7 @@
     "@types/react-dom": "^19.0.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.0.0",
     "lite-server": "^2.6.1",
     "npm-run-all": "^4.1.5",
